syntax = "proto3";
package stegos.valueshuffle;

import "crypto.proto";
import "blockchain.proto";

message DcRow {
    repeated stegos.crypto.Fr cols = 1;
}

message DcSheet {
    repeated DcRow rows = 1;
}

message DcMatrix {
    repeated DcSheet sheets = 1;
}


message SharedKeying {
    stegos.crypto.PublicKey pkey = 1;
    stegos.crypto.Pt ksig = 2;
}

message Commitment {
    stegos.crypto.Hash cmt = 1;
}

message CloakedVals {
    DcMatrix matrix = 1;
    stegos.crypto.Fr gamma_sum = 2;
    stegos.crypto.Fr fee_sum = 3;
}

message Signature {
    stegos.crypto.SchnorrSig sig = 1;
}

message SecretKeying {
    stegos.crypto.SecretKey skey = 1;
    repeated stegos.crypto.DiceMixParticipantID parts = 2;
    repeated stegos.crypto.DiceMixParticipantID drops = 4;
    repeated stegos.crypto.Hash cloaks = 5;
}

message VsPayload {
    oneof body {
        SharedKeying sharedkeying = 1;
        Commitment commitment = 2;
        CloakedVals cloakedvals = 3;
        Signature signature = 4;
        SecretKeying secretkeying = 5;
    }
}

message VsMessage {
    stegos.crypto.Hash sid = 1;
    VsPayload payload = 3;
}

message VsRestart {
    stegos.crypto.DiceMixParticipantID without_part = 1;
    stegos.crypto.Hash session_id = 2;
}

message Message {
    oneof body {
        VsMessage vsmessage = 1;
        VsRestart vsrestart = 2;
    }
}

message DirectMessage {
    stegos.crypto.DiceMixParticipantID source = 1;
    stegos.crypto.DiceMixParticipantID destination = 2;
    Message message = 3;
}